Update Find2ndLongestNumber.java